--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>GAYATRI PANDIT</title>
+<style rel="stylesheet" href="/css/style.css" type=text/css">
 </head>
 <body>
 <nav><!--for the navbar-->
